Edit index file add style css & import font axesome

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Coffee shop</title>
+
+    <!-- CSS File & Link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+    <header>
+        <div class="logo">
+            <a href="">
+                LOGO
+            </a>
+        </div>
+    </header>
+    <main>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis dolor, excepturi quae repellat aut dicta earum incidunt. Magni sed deserunt, aut quasi necessitatibus, impedit pariatur repellat officia perferendis consectetur dicta.
+    </main>
 </body>
 </html>
